--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 			<li class="push"><a herf="">Contacts</a></li>
 		</ul>
 	</nav>
-	<div class="container Zone red"><img class="cover" src=".\imgs\bs6-apache-rr-310-5-things-13_720x540.jpg"></div>
+	<div class="container Zone red"><img class="cover" src="bs6-apache-rr-310-5-things-13_720x540.jpg"></div>
 	 
 	<div class="Zone blue grid-wrapper">
-		<div class="box zone"><img src=".\img\files_2.png"></div>
-	<div class="box zone"><img src=".\img\files_2.png"></div>
-	<div class="box zone"><img src=".\img\files_2.png"></div>
-		<div class="box zone"><img src=".\img\files_2.png"></div>
-	<div class="box zone"><img src=".\img\files_2.png"></div>
-	<div class="box zone"><img src=".\img\files_2.png"></div>
-	<div class="box zone"><img src=".\img\files_2.png"></div>
-	<div class="box zone"><img src=".\img\files_2.png"></div>
+		<div class="box zone"><img src="files_2.png"></div>
+	<div class="box zone"><img src="files_2.png"></div>
+	<div class="box zone"><img src="files_2.png"></div>
+		<div class="box zone"><img src="files_2.png"></div>
+	<div class="box zone"><img src="files_2.png"></div>
+	<div class="box zone"><img src="files_2.png"></div>
+	<div class="box zone"><img src="files_2.png"></div>
+	<div class="box zone"><img src="files_2.png"></div>
 	</div>
 	<footer class="Zone yellow">🤩Footer</footer>
 
